[gd_scene load_steps=25 format=4 uid="uid://d2q66kjf63q45"]

[ext_resource type="Script" uid="uid://dyqlr67cl8cvf" path="res://scripts/Test.gd" id="1_x2xxo"]
[ext_resource type="Script" uid="uid://by6aitdakufv0" path="res://scripts/LevelManager.gd" id="2_2cbcq"]
[ext_resource type="PackedScene" uid="uid://1b6isml7mpuj" path="res://scenes/ui.tscn" id="2_np2pn"]
[ext_resource type="Script" uid="uid://d3powhd440ri6" path="res://scripts/SoundManager.gd" id="3_isj1j"]
[ext_resource type="AudioStream" uid="uid://cwud5jrki6cas" path="res://assets/audio/bgm.mp3" id="4_so66j"]
[ext_resource type="AudioStream" uid="uid://5lnulphwo60x" path="res://assets/audio/coin.mp3" id="5_tr1x6"]
[ext_resource type="AudioStream" uid="uid://c2sih3irehx1r" path="res://assets/audio/09 - EnemyDamage.wav" id="6_d5akn"]
[ext_resource type="AudioStream" uid="uid://dpxanr6sf58gm" path="res://assets/audio/wood-crate-destory.mp3" id="7_wbtxt"]
[ext_resource type="TileSet" uid="uid://c8iqsa6h4c4qc" path="res://assets/ground_tileset.tres" id="8_x2fux"]
[ext_resource type="PackedScene" uid="uid://bhyiee5tcg8c8" path="res://scenes/coin.tscn" id="9_s7g0b"]
[ext_resource type="PackedScene" uid="uid://il5orj3737qt" path="res://scenes/spike.tscn" id="10_mmfjm"]
[ext_resource type="PackedScene" uid="uid://d4nyvexhfh5hv" path="res://scenes/trophy.tscn" id="11_k8ld0"]
[ext_resource type="PackedScene" uid="uid://bbolwh6u3jwcd" path="res://scenes/box.tscn" id="12_mbb35"]
[ext_resource type="Script" uid="uid://bhexx6mj1xv3q" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2d.gd" id="13_iw4em"]
[ext_resource type="Script" uid="uid://8umksf8e80fw" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="14_hnsmf"]
[ext_resource type="Script" uid="uid://bd046eokvcnu2" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="15_nossa"]
[ext_resource type="PackedScene" uid="uid://br8ub7waghwlo" path="res://scenes/player.tscn" id="16_hjqri"]
[ext_resource type="PackedScene" uid="uid://rwbimw3fhoxj" path="res://scenes/enemy.tscn" id="18_1aans"]
[ext_resource type="Resource" uid="uid://d4jk35wgjvusy" path="res://data/enemy_conf_1.tres" id="19_v6ha0"]
[ext_resource type="Resource" uid="uid://bkrn57rr3s3rx" path="res://data/enemy_conf_2.tres" id="20_gmpev"]

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_a8y0u"]
resource_name = "Objects"
scenes/1/scene = ExtResource("9_s7g0b")
scenes/2/scene = ExtResource("10_mmfjm")
scenes/3/scene = ExtResource("11_k8ld0")
scenes/4/scene = ExtResource("12_mbb35")

[sub_resource type="TileSet" id="TileSet_jkv2x"]
sources/0 = SubResource("TileSetScenesCollectionSource_a8y0u")

[sub_resource type="Resource" id="Resource_o6xl0"]
script = ExtResource("14_hnsmf")

[sub_resource type="Resource" id="Resource_gmpev"]
script = ExtResource("14_hnsmf")

[node name="Main" type="Node2D"]
script = ExtResource("1_x2xxo")

[node name="UI" parent="." instance=ExtResource("2_np2pn")]

[node name="LevelManager" type="Node" parent="." node_paths=PackedStringArray("player", "ui_manager")]
script = ExtResource("2_2cbcq")
next_level = 2
player = NodePath("../Player")
ui_manager = NodePath("../UI")

[node name="SoundManager" type="Node" parent="." node_paths=PackedStringArray("bgm_slider", "sfx_slider")]
script = ExtResource("3_isj1j")
bgm_slider = NodePath("../UI/VolumeContainer/HBoxContainer/BGMHSlider")
sfx_slider = NodePath("../UI/VolumeContainer/HBoxContainer2/SFXHSlider")

[node name="BGM" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource("4_so66j")
bus = &"BGM"

[node name="CoinSFX" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource("5_tr1x6")
bus = &"SFX"

[node name="EnemyDieSFX" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource("6_d5akn")
bus = &"SFX"

[node name="BoxDestroyedSFX" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource("7_wbtxt")
bus = &"SFX"

[node name="TileMapLayer_Background" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD//xQAAAADAAQAAAAAABQAAAADAAQAAAABABQAAAADAAQAAAACABQAAAADAAQAAAADABQAAAADAAQAAAAEABQAAAADAAQAAAAFABQAAAADAAQAAAAGABQAAAADAAQAAAAHABQAAAADAAQAAAAIABQAAAADAAQAAAAJABQAAAADAAQAAAAKABQAAAADAAQAAAALABQAAAADAAQAAAAMABQAAAADAAQAAAANABQAAAADAAQAAAAOABQAAAADAAQAAAAPABQAAAADAAQAAAAQABQAAAADAAQAAAARABQAAAADAAQAAAASABQAAAADAAQAAAATABQAAAADAAQAAAAUABQAAAADAAQAAAAVABQAAAADAAQAAAAWABQAAAADAAQAAAAXABQAAAADAAQAAAAYABQAAAADAAQAAAAZABQAAAADAAQAAAAaABQAAAADAAQAAAAbABQAAAADAAQAAAAcABQAAAADAAQAAAAdABQAAAADAAQAAAAeABQAAAADAAQAAAAfABQAAAADAAQAAAAgABQAAAADAAQAAAAhABQAAAADAAQAAAAiABQAAAADAAQAAAAjABQAAAADAAQAAAAkABQAAAADAAQAAAAlABQAAAADAAQAAAAmABQAAAADAAQAAAAnABQAAAADAAQAAAAoABQAAAADAAQAAAApABQAAAADAAQAAAAqABQAAAADAAQAAAArABQAAAADAAQAAAAsABQAAAADAAQAAAAtABQAAAADAAQAAAAuABQAAAADAAQAAAAvABQAAAADAAQAAAAwABQAAAADAAQAAAAxABQAAAADAAQAAAAyABQAAAADAAQAAAAzABQAAAADAAQAAAA0ABQAAAADAAQAAAA1ABQAAAADAAQAAAA2ABQAAAADAAQAAAA3ABQAAAADAAQAAAA4ABQAAAADAAQAAAA5ABQAAAADAAQAAAA6ABQAAAADAAQAAAA7ABQAAAADAAQAAAA8ABQAAAADAAQAAAA9ABQAAAADAAQAAAA+ABQAAAADAAQAAAA/ABQAAAADAAQAAABAABQAAAADAAQAAABBABQAAAADAAQAAAAAAAkAAAADAAQAAAAAAAoAAAADAAQAAAAAAAsAAAADAAQAAAAAAAwAAAADAAQAAAAAAA0AAAADAAQAAAAAAA4AAAADAAQAAAAAAA8AAAADAAQAAAAAABAAAAADAAQAAAAAABEAAAADAAQAAAAAABIAAAADAAQAAAAAABMAAAADAAQAAAABAAkAAAADAAQAAAABAAoAAAADAAQAAAABAAsAAAADAAQAAAABAAwAAAADAAQAAAABAA0AAAADAAQAAAABAA4AAAADAAQAAAABAA8AAAADAAQAAAABABAAAAADAAQAAAABABEAAAADAAQAAAABABIAAAADAAQAAAABABMAAAADAAQAAAACAAkAAAADAAQAAAACAAoAAAADAAQAAAACAAsAAAADAAQAAAACAAwAAAADAAQAAAACAA0AAAADAAQAAAACAA4AAAADAAQAAAACAA8AAAADAAQAAAACABAAAAADAAQAAAACABEAAAADAAQAAAACABIAAAADAAQAAAACABMAAAADAAQAAAADAAkAAAADAAQAAAADAAoAAAADAAQAAAADAAsAAAADAAQAAAADAAwAAAADAAQAAAADAA0AAAADAAQAAAADAA4AAAADAAQAAAADAA8AAAADAAQAAAADABAAAAADAAQAAAADABEAAAADAAQAAAADABIAAAADAAQAAAADABMAAAADAAQAAAAEAAkAAAADAAQAAAAEAAoAAAADAAQAAAAEAAsAAAADAAQAAAAEAAwAAAADAAQAAAAEAA0AAAADAAQAAAAEAA4AAAADAAQAAAAEAA8AAAADAAQAAAAEABAAAAADAAQAAAAEABEAAAADAAQAAAAEABIAAAADAAQAAAAEABMAAAADAAQAAAAFAAkAAAADAAQAAAAFAAoAAAADAAQAAAAFAAsAAAADAAQAAAAFAAwAAAADAAQAAAAFAA0AAAADAAQAAAAFAA4AAAADAAQAAAAFAA8AAAADAAQAAAAFABAAAAADAAQAAAAFABEAAAADAAQAAAAFABIAAAADAAQAAAAFABMAAAADAAQAAAAGAAkAAAADAAQAAAAGAAoAAAADAAQAAAAGAAsAAAADAAQAAAAGAAwAAAADAAQAAAAGAA0AAAADAAQAAAAGAA4AAAADAAQAAAAGAA8AAAADAAQAAAAGABAAAAADAAQAAAAGABEAAAADAAQAAAAGABIAAAADAAQAAAAGABMAAAADAAQAAAAHAAkAAAADAAQAAAAHAAoAAAADAAQAAAAHAAsAAAADAAQAAAAHAAwAAAADAAQAAAAHAA0AAAADAAQAAAAHAA4AAAADAAQAAAAHAA8AAAADAAQAAAAHABAAAAADAAQAAAAHABEAAAADAAQAAAAHABIAAAADAAQAAAAHABMAAAADAAQAAAAIAAkAAAADAAQAAAAIAAoAAAADAAQAAAAIAAsAAAADAAQAAAAIAAwAAAADAAQAAAAIAA0AAAADAAQAAAAIAA4AAAADAAQAAAAIAA8AAAADAAQAAAAIABAAAAADAAQAAAAIABEAAAADAAQAAAAIABIAAAADAAQAAAAIABMAAAADAAQAAAAJAAkAAAADAAQAAAAJAAoAAAADAAQAAAAJAAsAAAADAAQAAAAJAAwAAAADAAQAAAAJAA0AAAADAAQAAAAJAA4AAAADAAQAAAAJAA8AAAADAAQAAAAJABAAAAADAAQAAAAJABEAAAADAAQAAAAJABIAAAADAAQAAAAJABMAAAADAAQAAAAKAAkAAAADAAQAAAAKAAoAAAADAAQAAAAKAAsAAAADAAQAAAAKAAwAAAADAAQAAAAKAA0AAAADAAQAAAAKAA4AAAADAAQAAAAKAA8AAAADAAQAAAAKABAAAAADAAQAAAAKABEAAAADAAQAAAAKABIAAAADAAQAAAAKABMAAAADAAQAAAALAAkAAAADAAQAAAALAAoAAAADAAQAAAALAAsAAAADAAQAAAALAAwAAAADAAQAAAALAA0AAAADAAQAAAALAA4AAAADAAQAAAALAA8AAAADAAQAAAALABAAAAADAAQAAAALABEAAAADAAQAAAALABIAAAADAAQAAAALABMAAAADAAQAAAAMAAkAAAADAAQAAAAMAAoAAAADAAQAAAAMAAsAAAADAAQAAAAMAAwAAAADAAQAAAAMAA0AAAADAAQAAAAMAA4AAAADAAQAAAAMAA8AAAADAAQAAAAMABAAAAADAAQAAAAMABEAAAADAAQAAAAMABIAAAADAAQAAAAMABMAAAADAAQAAAANAAkAAAADAAQAAAANAAoAAAADAAQAAAANAAsAAAADAAQAAAANAAwAAAADAAQAAAANAA0AAAADAAQAAAANAA4AAAADAAQAAAANAA8AAAADAAQAAAANABAAAAADAAQAAAANABEAAAADAAQAAAANABIAAAADAAQAAAANABMAAAADAAQAAAAOAAkAAAADAAQAAAAOAAoAAAADAAQAAAAOAAsAAAADAAQAAAAOAAwAAAADAAQAAAAOAA0AAAADAAQAAAAOAA4AAAADAAQAAAAOAA8AAAADAAQAAAAOABAAAAADAAQAAAAOABEAAAADAAQAAAAOABIAAAADAAQAAAAOABMAAAADAAQAAAAPAAkAAAADAAQAAAAPAAoAAAADAAQAAAAPAAsAAAADAAQAAAAPAAwAAAADAAQAAAAPAA0AAAADAAQAAAAPAA4AAAADAAQAAAAPAA8AAAADAAQAAAAPABAAAAADAAQAAAAPABEAAAADAAQAAAAPABIAAAADAAQAAAAPABMAAAADAAQAAAAQAAkAAAADAAQAAAAQAAoAAAADAAQAAAAQAAsAAAADAAQAAAAQAAwAAAADAAQAAAAQAA0AAAADAAQAAAAQAA4AAAADAAQAAAAQAA8AAAADAAQAAAAQABAAAAADAAQAAAAQABEAAAADAAQAAAAQABIAAAADAAQAAAAQABMAAAADAAQAAAARAAkAAAADAAQAAAARAAoAAAADAAQAAAARAAsAAAADAAQAAAARAAwAAAADAAQAAAARAA0AAAADAAQAAAARAA4AAAADAAQAAAARAA8AAAADAAQAAAARABAAAAADAAQAAAARABEAAAADAAQAAAARABIAAAADAAQAAAARABMAAAADAAQAAAASAAkAAAADAAQAAAASAAoAAAADAAQAAAASAAsAAAADAAQAAAASAAwAAAADAAQAAAASAA0AAAADAAQAAAASAA4AAAADAAQAAAASAA8AAAADAAQAAAASABAAAAADAAQAAAASABEAAAADAAQAAAASABIAAAADAAQAAAASABMAAAADAAQAAAATAAkAAAADAAQAAAATAAoAAAADAAQAAAATAAsAAAADAAQAAAATAAwAAAADAAQAAAATAA0AAAADAAQAAAATAA4AAAADAAQAAAATAA8AAAADAAQAAAATABAAAAADAAQAAAATABEAAAADAAQAAAATABIAAAADAAQAAAATABMAAAADAAQAAAAUAAkAAAADAAQAAAAUAAoAAAADAAQAAAAUAAsAAAADAAQAAAAUAAwAAAADAAQAAAAUAA0AAAADAAQAAAAUAA4AAAADAAQAAAAUAA8AAAADAAQAAAAUABAAAAADAAQAAAAUABEAAAADAAQAAAAUABIAAAADAAQAAAAUABMAAAADAAQAAAAVAAkAAAADAAQAAAAVAAoAAAADAAQAAAAVAAsAAAADAAQAAAAVAAwAAAADAAQAAAAVAA0AAAADAAQAAAAVAA4AAAADAAQAAAAVAA8AAAADAAQAAAAVABAAAAADAAQAAAAVABEAAAADAAQAAAAVABIAAAADAAQAAAAVABMAAAADAAQAAAAWAAkAAAADAAQAAAAWAAoAAAADAAQAAAAWAAsAAAADAAQAAAAWAAwAAAADAAQAAAAWAA0AAAADAAQAAAAWAA4AAAADAAQAAAAWAA8AAAADAAQAAAAWABAAAAADAAQAAAAWABEAAAADAAQAAAAWABIAAAADAAQAAAAWABMAAAADAAQAAAAXAAkAAAADAAQAAAAXAAoAAAADAAQAAAAXAAsAAAADAAQAAAAXAAwAAAADAAQAAAAXAA0AAAADAAQAAAAXAA4AAAADAAQAAAAXAA8AAAADAAQAAAAXABAAAAADAAQAAAAXABEAAAADAAQAAAAXABIAAAADAAQAAAAXABMAAAADAAQAAAAYAAkAAAADAAQAAAAYAAoAAAADAAQAAAAYAAsAAAADAAQAAAAYAAwAAAADAAQAAAAYAA0AAAADAAQAAAAYAA4AAAADAAQAAAAYAA8AAAADAAQAAAAYABAAAAADAAQAAAAYABEAAAADAAQAAAAYABIAAAADAAQAAAAYABMAAAADAAQAAAAZAAkAAAADAAQAAAAZAAoAAAADAAQAAAAZAAsAAAADAAQAAAAZAAwAAAADAAQAAAAZAA0AAAADAAQAAAAZAA4AAAADAAQAAAAZAA8AAAADAAQAAAAZABAAAAADAAQAAAAZABEAAAADAAQAAAAZABIAAAADAAQAAAAZABMAAAADAAQAAAAaAAkAAAADAAQAAAAaAAoAAAADAAQAAAAaAAsAAAADAAQAAAAaAAwAAAADAAQAAAAaAA0AAAADAAQAAAAaAA4AAAADAAQAAAAaAA8AAAADAAQAAAAaABAAAAADAAQAAAAaABEAAAADAAQAAAAaABIAAAADAAQAAAAaABMAAAADAAQAAAAbAAkAAAADAAQAAAAbAAoAAAADAAQAAAAbAAsAAAADAAQAAAAbAAwAAAADAAQAAAAbAA0AAAADAAQAAAAbAA4AAAADAAQAAAAbAA8AAAADAAQAAAAbABAAAAADAAQAAAAbABEAAAADAAQAAAAbABIAAAADAAQAAAAbABMAAAADAAQAAAAcAAkAAAADAAQAAAAcAAoAAAADAAQAAAAcAAsAAAADAAQAAAAcAAwAAAADAAQAAAAcAA0AAAADAAQAAAAcAA4AAAADAAQAAAAcAA8AAAADAAQAAAAcABAAAAADAAQAAAAcABEAAAADAAQAAAAcABIAAAADAAQAAAAcABMAAAADAAQAAAAdAAkAAAADAAQAAAAdAAoAAAADAAQAAAAdAAsAAAADAAQAAAAdAAwAAAADAAQAAAAdAA0AAAADAAQAAAAdAA4AAAADAAQAAAAdAA8AAAADAAQAAAAdABAAAAADAAQAAAAdABEAAAADAAQAAAAdABIAAAADAAQAAAAdABMAAAADAAQAAAAeAAkAAAADAAQAAAAeAAoAAAADAAQAAAAeAAsAAAADAAQAAAAeAAwAAAADAAQAAAAeAA0AAAADAAQAAAAeAA4AAAADAAQAAAAeAA8AAAADAAQAAAAeABAAAAADAAQAAAAeABEAAAADAAQAAAAeABIAAAADAAQAAAAeABMAAAADAAQAAAAfAAkAAAADAAQAAAAfAAoAAAADAAQAAAAfAAsAAAADAAQAAAAfAAwAAAADAAQAAAAfAA0AAAADAAQAAAAfAA4AAAADAAQAAAAfAA8AAAADAAQAAAAfABAAAAADAAQAAAAfABEAAAADAAQAAAAfABIAAAADAAQAAAAfABMAAAADAAQAAAAgAAkAAAADAAQAAAAgAAoAAAADAAQAAAAgAAsAAAADAAQAAAAgAAwAAAADAAQAAAAgAA0AAAADAAQAAAAgAA4AAAADAAQAAAAgAA8AAAADAAQAAAAgABAAAAADAAQAAAAgABEAAAADAAQAAAAgABIAAAADAAQAAAAgABMAAAADAAQAAAAhAAkAAAADAAQAAAAhAAoAAAADAAQAAAAhAAsAAAADAAQAAAAhAAwAAAADAAQAAAAhAA0AAAADAAQAAAAhAA4AAAADAAQAAAAhAA8AAAADAAQAAAAhABAAAAADAAQAAAAhABEAAAADAAQAAAAhABIAAAADAAQAAAAhABMAAAADAAQAAAAiAAkAAAADAAQAAAAiAAoAAAADAAQAAAAiAAsAAAADAAQAAAAiAAwAAAADAAQAAAAiAA0AAAADAAQAAAAiAA4AAAADAAQAAAAiAA8AAAADAAQAAAAiABAAAAADAAQAAAAiABEAAAADAAQAAAAiABIAAAADAAQAAAAiABMAAAADAAQAAAA=")
enabled = false
tile_set = ExtResource("8_x2fux")

[node name="TileMapLayer_Ground" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AACBABEAAAABAAEAAACBABIAAAABAAEAAACBABMAAAABAAEAAACBABQAAAABAAEAAACBABUAAAABAAEAAACBABYAAAABAAEAAACBABcAAAABAAEAAACCABEAAAABAAEAAACCABIAAAABAAEAAACCABMAAAABAAEAAACCABQAAAABAAEAAACCABUAAAABAAEAAACCABYAAAABAAEAAACCABcAAAABAAEAAACDABEAAAABAAEAAACDABIAAAABAAEAAACDABMAAAABAAEAAACDABQAAAABAAEAAACDABUAAAABAAEAAACDABYAAAABAAEAAACDABcAAAABAAEAAACEABEAAAABAAEAAACEABIAAAABAAEAAACEABMAAAABAAEAAACEABQAAAABAAEAAACEABUAAAABAAEAAACEABYAAAABAAEAAACEABcAAAABAAEAAACFABEAAAABAAEAAACFABIAAAABAAEAAACFABMAAAABAAEAAACFABQAAAABAAEAAACFABUAAAABAAEAAACFABYAAAABAAEAAACFABcAAAABAAEAAACGABEAAAABAAEAAACGABIAAAABAAEAAACGABMAAAABAAEAAACGABQAAAABAAEAAACGABUAAAABAAEAAACGABYAAAABAAEAAACGABcAAAABAAEAAACHABEAAAABAAEAAACHABIAAAABAAEAAACHABMAAAABAAEAAACHABQAAAABAAEAAACHABUAAAABAAEAAACHABYAAAABAAEAAACHABcAAAABAAEAAACIABEAAAABAAEAAACIABIAAAABAAEAAACIABMAAAABAAEAAACIABQAAAABAAEAAACIABUAAAABAAEAAACIABYAAAABAAEAAACIABcAAAABAAEAAACJABEAAAABAAEAAACJABIAAAABAAEAAACJABMAAAABAAEAAACJABQAAAABAAEAAACJABUAAAABAAEAAACJABYAAAABAAEAAACJABcAAAABAAEAAACKABEAAAABAAEAAACKABIAAAABAAEAAACKABMAAAABAAEAAACKABQAAAABAAEAAACKABUAAAABAAEAAACKABYAAAABAAEAAACKABcAAAABAAEAAACLABEAAAABAAEAAACLABIAAAABAAEAAACLABMAAAABAAEAAACLABQAAAABAAEAAACLABUAAAABAAEAAACLABYAAAABAAEAAACLABcAAAABAAEAAACMABEAAAABAAEAAACMABIAAAABAAEAAACMABMAAAABAAEAAACMABQAAAABAAEAAACMABUAAAABAAEAAACMABYAAAABAAEAAACMABcAAAABAAEAAACNABEAAAABAAEAAACNABIAAAABAAEAAACNABMAAAABAAEAAACNABQAAAABAAEAAACNABUAAAABAAEAAACNABYAAAABAAEAAACNABcAAAABAAEAAACOABEAAAABAAEAAACOABIAAAABAAEAAACOABMAAAABAAEAAACOABQAAAABAAEAAACOABUAAAABAAEAAACOABYAAAABAAEAAACOABcAAAABAAEAAACPABEAAAABAAEAAACPABIAAAABAAEAAACPABMAAAABAAEAAACPABQAAAABAAEAAACPABUAAAABAAEAAACPABYAAAABAAEAAACPABcAAAABAAEAAACQABEAAAABAAEAAACQABIAAAABAAEAAACQABMAAAABAAEAAACQABQAAAABAAEAAACQABUAAAABAAEAAACQABYAAAABAAEAAACQABcAAAABAAEAAACRABEAAAABAAEAAACRABIAAAABAAEAAACRABMAAAABAAEAAACRABQAAAABAAEAAACRABUAAAABAAEAAACRABYAAAABAAEAAACRABcAAAABAAEAAACSABEAAAABAAEAAACSABIAAAABAAEAAACSABMAAAABAAEAAACSABQAAAABAAEAAACSABUAAAABAAEAAACSABYAAAABAAEAAACSABcAAAABAAEAAACTABEAAAABAAEAAACTABIAAAABAAEAAACTABMAAAABAAEAAACTABQAAAABAAEAAACTABUAAAABAAEAAACTABYAAAABAAEAAACTABcAAAABAAEAAACUABEAAAABAAEAAACUABIAAAABAAEAAACUABMAAAABAAEAAACUABQAAAABAAEAAACUABUAAAABAAEAAACUABYAAAABAAEAAACUABcAAAABAAEAAACVABEAAAABAAEAAACVABIAAAABAAEAAACVABMAAAABAAEAAACVABQAAAABAAEAAACVABUAAAABAAEAAACVABYAAAABAAEAAACVABcAAAABAAEAAACWABEAAAABAAEAAACWABIAAAABAAEAAACWABMAAAABAAEAAACWABQAAAABAAEAAACWABUAAAABAAEAAACWABYAAAABAAEAAACWABcAAAABAAEAAACXABEAAAABAAEAAACXABIAAAABAAEAAACXABMAAAABAAEAAACXABQAAAABAAEAAACXABUAAAABAAEAAACXABYAAAABAAEAAACXABcAAAABAAEAAACYABEAAAABAAEAAACYABIAAAABAAEAAACYABMAAAABAAEAAACYABQAAAABAAEAAACYABUAAAABAAEAAACYABYAAAABAAEAAACYABcAAAABAAEAAACZABEAAAABAAEAAACZABIAAAABAAEAAACZABMAAAABAAEAAACZABQAAAABAAEAAACZABUAAAABAAEAAACZABYAAAABAAEAAACZABcAAAABAAEAAACaABEAAAABAAEAAACaABIAAAABAAEAAACaABMAAAABAAEAAACaABQAAAABAAEAAACaABUAAAABAAEAAACaABYAAAABAAEAAACaABcAAAABAAEAAACbABEAAAABAAEAAACbABIAAAABAAEAAACbABMAAAABAAEAAACbABQAAAABAAEAAACbABUAAAABAAEAAACbABYAAAABAAEAAACbABcAAAABAAEAAACcABEAAAABAAEAAACcABIAAAABAAEAAACcABMAAAABAAEAAACcABQAAAABAAEAAACcABUAAAABAAEAAACcABYAAAABAAEAAACcABcAAAABAAEAAACdABEAAAABAAEAAACdABIAAAABAAEAAACdABMAAAABAAEAAACdABQAAAABAAEAAACdABUAAAABAAEAAACdABYAAAABAAEAAACdABcAAAABAAEAAACeABEAAAABAAEAAACeABIAAAABAAEAAACeABMAAAABAAEAAACeABQAAAABAAEAAACeABUAAAABAAEAAACeABYAAAABAAEAAACeABcAAAABAAEAAACfABEAAAABAAEAAACfABIAAAABAAEAAACfABMAAAABAAEAAACfABQAAAABAAEAAACfABUAAAABAAEAAACfABYAAAABAAEAAACfABcAAAABAAEAAAAiABYAAAABAAIAAAAiABUAAAABAAEAAAAiABQAAAABAAEAAAAiABMAAAABAAEAAAAiABIAAAABAAEAAAAiABEAAAABAAEAAAAhABEAAAAMAAgAAAAgABEAAAAMAAgAAAAfABEAAAAMAAgAAAAeABEAAAAMAAgAAAAdABEAAAAMAAgAAAAcABEAAAAMAAgAAAAbABEAAAAMAAgAAAAaABEAAAAMAAgAAAAZABEAAAAMAAgAAAAYABEAAAAMAAgAAAAXABEAAAAMAAgAAAAWABEAAAAMAAgAAAAVABEAAAAMAAgAAAAUABEAAAAMAAgAAAATABEAAAAMAAgAAAASABEAAAAMAAgAAAARABEAAAAMAAgAAAAQABEAAAAMAAgAAAAPABEAAAAMAAgAAAAOABEAAAAMAAgAAAANABEAAAAMAAgAAAAMABEAAAAMAAgAAAALABEAAAAMAAgAAAAKABEAAAAMAAgAAAAJABEAAAAMAAgAAAAIABEAAAAMAAgAAAAHABEAAAAMAAgAAAAGABEAAAAMAAgAAAAFABEAAAAMAAgAAAAEABEAAAAMAAgAAAADABEAAAAMAAgAAAACABEAAAAMAAgAAAABABEAAAAMAAgAAAAAABEAAAAMAAgAAAD//xEAAAAMAAgAAAAqABYAAAABAAIAAAAqABUAAAABAAEAAAAqABQAAAABAAEAAAAqABMAAAABAAEAAAAqABIAAAABAAEAAAAqABEAAAABAAEAAAAqABAAAAABAAEAAAAqAA8AAAACAAEAAAAqAA4AAAACAAEAAAAqAA0AAAACAAAAAAApABYAAAABAAIAAAApABUAAAABAAEAAAApABQAAAABAAEAAAApABMAAAABAAEAAAApABIAAAABAAEAAAApABEAAAABAAEAAAApABAAAAABAAEAAAApAA8AAAABAAEAAAApAA4AAAABAAEAAAApAA0AAAABAAAAAAAoABYAAAABAAIAAAAoABUAAAABAAEAAAAoABQAAAABAAEAAAAoABMAAAABAAEAAAAoABIAAAABAAEAAAAoABEAAAABAAEAAAAoABAAAAABAAEAAAAoAA8AAAABAAEAAAAoAA4AAAABAAEAAAAoAA0AAAABAAAAAAAnABYAAAABAAIAAAAnABUAAAABAAEAAAAnABQAAAABAAEAAAAnABMAAAABAAEAAAAnABIAAAABAAEAAAAnABEAAAABAAEAAAAnABAAAAABAAEAAAAnAA8AAAABAAEAAAAnAA4AAAABAAEAAAAnAA0AAAABAAAAAAAmABYAAAABAAIAAAAmABUAAAABAAEAAAAmABQAAAABAAEAAAAmABMAAAABAAEAAAAmABIAAAABAAEAAAAmABEAAAABAAEAAAAmABAAAAABAAEAAAAmAA8AAAABAAEAAAAmAA4AAAABAAEAAAAmAA0AAAABAAAAAAAlABYAAAABAAIAAAAlABUAAAABAAEAAAAlABQAAAABAAEAAAAlABMAAAABAAEAAAAlABIAAAABAAEAAAAlABEAAAABAAEAAAAlABAAAAABAAEAAAAlAA8AAAABAAEAAAAlAA4AAAABAAEAAAAlAA0AAAABAAAAAAAkABYAAAABAAIAAAAkABUAAAABAAEAAAAkABQAAAABAAEAAAAkABMAAAABAAEAAAAkABIAAAABAAEAAAAkABEAAAABAAEAAAAkABAAAAABAAEAAAAkAA8AAAABAAEAAAAkAA4AAAABAAEAAAAkAA0AAAABAAAAAAAjABYAAAABAAIAAAAjABUAAAABAAEAAAAjABQAAAABAAEAAAAjABMAAAABAAEAAAAjABIAAAABAAEAAAAjABEAAAABAAEAAAAjABAAAAABAAEAAAAjAA8AAAABAAEAAAAjAA4AAAABAAEAAAAjAA0AAAABAAAAAAAiABAAAAABAAEAAAAiAA8AAAABAAEAAAAiAA4AAAABAAEAAAAiAA0AAAABAAAAAAAvABYAAAABAAIAAAAvABUAAAABAAEAAAAvABQAAAABAAEAAAAvABMAAAABAAEAAAAvABIAAAABAAEAAAAvABEAAAABAAEAAAAvABAAAAABAAAAAAAuABYAAAABAAIAAAAuABUAAAABAAEAAAAuABQAAAABAAEAAAAuABMAAAABAAEAAAAuABIAAAABAAEAAAAuABEAAAABAAEAAAAuABAAAAABAAAAAAAtABYAAAABAAIAAAAtABUAAAABAAEAAAAtABQAAAABAAEAAAAtABMAAAABAAEAAAAtABIAAAABAAEAAAAtABEAAAABAAEAAAAtABAAAAABAAAAAAAsABYAAAABAAIAAAAsABUAAAABAAEAAAAsABQAAAABAAEAAAAsABMAAAABAAEAAAAsABIAAAABAAEAAAAsABEAAAABAAEAAAAsABAAAAABAAAAAAArABYAAAABAAIAAAArABUAAAABAAEAAAArABQAAAABAAEAAAArABMAAAABAAEAAAArABIAAAABAAEAAAArABEAAAABAAEAAAArABAAAAABAAAAAABGABYAAAABAAIAAABGABUAAAABAAEAAABGABQAAAABAAEAAABGABMAAAABAAEAAABGABIAAAABAAEAAABGABEAAAABAAEAAABGABAAAAABAAAAAABFABYAAAABAAIAAABFABUAAAABAAEAAABFABQAAAABAAEAAABFABMAAAABAAEAAABFABIAAAABAAEAAABFABEAAAABAAEAAABFABAAAAABAAAAAABEABYAAAABAAIAAABEABUAAAABAAEAAABEABQAAAABAAEAAABEABMAAAABAAEAAABEABIAAAABAAEAAABEABEAAAABAAEAAABEABAAAAABAAAAAABDABYAAAABAAIAAABDABUAAAABAAEAAABDABQAAAABAAEAAABDABMAAAABAAEAAABDABIAAAABAAEAAABDABEAAAABAAEAAABDABAAAAABAAAAAABCABYAAAABAAIAAABCABUAAAABAAEAAABCABQAAAABAAEAAABCABMAAAABAAEAAABCABIAAAABAAEAAABCABEAAAABAAEAAABCABAAAAABAAAAAABBABYAAAABAAIAAABBABUAAAABAAEAAABBABQAAAABAAEAAABBABMAAAABAAEAAABBABIAAAABAAEAAABBABEAAAABAAEAAABBABAAAAABAAAAAABAABYAAAABAAIAAABAABUAAAABAAEAAABAABQAAAABAAEAAABAABMAAAABAAEAAABAABIAAAABAAEAAABAABEAAAABAAEAAABAABAAAAABAAAAAAA/ABYAAAABAAIAAAA/ABUAAAABAAEAAAA/ABQAAAABAAEAAAA/ABMAAAABAAEAAAA/ABIAAAABAAEAAAA/ABEAAAABAAEAAAA/ABAAAAABAAAAAAA+ABYAAAABAAIAAAA+ABUAAAABAAEAAAA+ABQAAAABAAEAAAA+ABMAAAABAAEAAAA+ABIAAAABAAEAAAA+ABEAAAABAAEAAAA+ABAAAAABAAAAAAA9ABYAAAABAAIAAAA9ABUAAAABAAEAAAA9ABQAAAABAAEAAAA9ABMAAAABAAEAAAA9ABIAAAABAAEAAAA9ABEAAAABAAEAAAA9ABAAAAABAAAAAAA8ABYAAAABAAIAAAA8ABUAAAABAAEAAAA8ABQAAAABAAEAAAA8ABMAAAABAAEAAAA8ABIAAAABAAEAAAA8ABEAAAABAAEAAAA8ABAAAAABAAAAAAA7ABYAAAABAAIAAAA7ABUAAAABAAEAAAA7ABQAAAABAAEAAAA7ABMAAAABAAEAAAA7ABIAAAABAAEAAAA7ABEAAAABAAEAAAA7ABAAAAABAAAAAAA6ABYAAAABAAIAAAA6ABUAAAABAAEAAAA6ABQAAAABAAEAAAA6ABMAAAABAAEAAAA6ABIAAAABAAEAAAA6ABEAAAABAAEAAAA6ABAAAAABAAAAAAA5ABYAAAAAAAIAAAA5ABUAAAAAAAEAAAA5ABQAAAAAAAEAAAA5ABMAAAAAAAEAAAA5ABIAAAAAAAEAAAA5ABEAAAAAAAEAAAA5ABAAAAAAAAAAAABeABYAAAACAAIAAABeABUAAAACAAEAAABeABQAAAACAAEAAABeABMAAAACAAEAAABeABIAAAACAAEAAABeABEAAAACAAEAAABeABAAAAACAAAAAABdABYAAAABAAIAAABdABUAAAABAAEAAABdABQAAAABAAEAAABdABMAAAABAAEAAABdABIAAAABAAEAAABdABEAAAABAAEAAABdABAAAAABAAAAAABcABYAAAABAAIAAABcABUAAAABAAEAAABcABQAAAABAAEAAABcABMAAAABAAEAAABcABIAAAABAAEAAABcABEAAAABAAEAAABcABAAAAABAAAAAABbABYAAAABAAIAAABbABUAAAABAAEAAABbABQAAAABAAEAAABbABMAAAABAAEAAABbABIAAAABAAEAAABbABEAAAABAAEAAABbABAAAAABAAAAAABaABYAAAABAAIAAABaABUAAAABAAEAAABaABQAAAABAAEAAABaABMAAAABAAEAAABaABIAAAABAAEAAABaABEAAAABAAEAAABaABAAAAABAAAAAABZABYAAAABAAIAAABZABUAAAABAAEAAABZABQAAAABAAEAAABZABMAAAABAAEAAABZABIAAAABAAEAAABZABEAAAABAAEAAABZABAAAAABAAAAAABYABYAAAABAAIAAABYABUAAAABAAEAAABYABQAAAABAAEAAABYABMAAAABAAEAAABYABIAAAABAAEAAABYABEAAAABAAEAAABYABAAAAABAAAAAABXABYAAAABAAIAAABXABUAAAABAAEAAABXABQAAAABAAEAAABXABMAAAABAAEAAABXABIAAAABAAEAAABXABEAAAABAAEAAABXABAAAAABAAAAAABWABYAAAABAAIAAABWABUAAAABAAEAAABWABQAAAABAAEAAABWABMAAAABAAEAAABWABIAAAABAAEAAABWABEAAAABAAEAAABWABAAAAABAAAAAABVABYAAAABAAIAAABVABUAAAABAAEAAABVABQAAAABAAEAAABVABMAAAABAAEAAABVABIAAAABAAEAAABVABEAAAABAAEAAABVABAAAAABAAAAAABUABYAAAABAAIAAABUABUAAAABAAEAAABUABQAAAABAAEAAABUABMAAAABAAEAAABUABIAAAABAAEAAABUABEAAAABAAEAAABUABAAAAABAAAAAABTABYAAAABAAIAAABTABUAAAABAAEAAABTABQAAAABAAEAAABTABMAAAABAAEAAABTABIAAAABAAEAAABTABEAAAABAAEAAABTABAAAAABAAAAAABSABYAAAABAAIAAABSABUAAAABAAEAAABSABQAAAABAAEAAABSABMAAAABAAEAAABSABIAAAABAAEAAABSABEAAAABAAEAAABSABAAAAABAAAAAABRABYAAAABAAIAAABRABUAAAABAAEAAABRABQAAAABAAEAAABRABMAAAABAAEAAABRABIAAAABAAEAAABRABEAAAABAAEAAABRABAAAAABAAAAAABQABYAAAABAAIAAABQABUAAAABAAEAAABQABQAAAABAAEAAABQABMAAAABAAEAAABQABIAAAABAAEAAABQABEAAAABAAEAAABQABAAAAABAAAAAABPABYAAAABAAIAAABPABUAAAABAAEAAABPABQAAAABAAEAAABPABMAAAABAAEAAABPABIAAAABAAEAAABPABEAAAABAAEAAABPABAAAAABAAAAAABOABYAAAABAAIAAABOABUAAAABAAEAAABOABQAAAABAAEAAABOABMAAAABAAEAAABOABIAAAABAAEAAABOABEAAAABAAEAAABOABAAAAABAAAAAABNABYAAAABAAIAAABNABUAAAABAAEAAABNABQAAAABAAEAAABNABMAAAABAAEAAABNABIAAAABAAEAAABNABEAAAABAAEAAABNABAAAAABAAAAAABMABYAAAABAAIAAABMABUAAAABAAEAAABMABQAAAABAAEAAABMABMAAAABAAEAAABMABIAAAABAAEAAABMABEAAAABAAEAAABMABAAAAABAAAAAABLABYAAAABAAIAAABLABUAAAABAAEAAABLABQAAAABAAEAAABLABMAAAABAAEAAABLABIAAAABAAEAAABLABEAAAABAAEAAABLABAAAAABAAAAAABKABYAAAABAAIAAABKABUAAAABAAEAAABKABQAAAABAAEAAABKABMAAAABAAEAAABKABIAAAABAAEAAABKABEAAAABAAEAAABKABAAAAABAAAAAABJABYAAAABAAIAAABJABUAAAABAAEAAABJABQAAAABAAEAAABJABMAAAABAAEAAABJABIAAAABAAEAAABJABEAAAABAAEAAABJABAAAAABAAAAAABIABYAAAABAAIAAABIABUAAAABAAEAAABIABQAAAABAAEAAABIABMAAAABAAEAAABIABIAAAABAAEAAABIABEAAAABAAEAAABIABAAAAABAAAAAABHABYAAAABAAIAAABHABUAAAABAAEAAABHABQAAAABAAEAAABHABMAAAABAAEAAABHABIAAAABAAEAAABHABEAAAABAAEAAABHABAAAAABAAAAAAAyABYAAAABAAIAAAAyABUAAAABAAEAAAAyABQAAAABAAEAAAAyABMAAAABAAEAAAAyABIAAAABAAEAAAAyABEAAAABAAEAAAAyABAAAAABAAAAAAAxABYAAAABAAIAAAAxABUAAAABAAEAAAAxABQAAAABAAEAAAAxABMAAAABAAEAAAAxABIAAAABAAEAAAAxABEAAAABAAEAAAAxABAAAAABAAAAAAAwABYAAAABAAIAAAAwABUAAAABAAEAAAAwABQAAAABAAEAAAAwABMAAAABAAEAAAAwABIAAAABAAEAAAAwABEAAAABAAEAAAAwABAAAAABAAAAAAA0ABYAAAACAAIAAAA0ABUAAAACAAEAAAA0ABQAAAACAAEAAAA0ABMAAAACAAEAAAA0ABIAAAACAAEAAAA0ABEAAAACAAEAAAA0ABAAAAACAAAAAAAzABYAAAABAAIAAAAzABUAAAABAAEAAAAzABQAAAABAAEAAAAzABMAAAABAAEAAAAzABIAAAABAAEAAAAzABEAAAABAAEAAAAzABAAAAABAAAAAAD+/xEAAAAMAAgAAAD9/xEAAAAMAAgAAAD8/xEAAAAMAAgAAAD7/xEAAAAMAAgAAAD6/xEAAAAMAAgAAAD5/xEAAAAMAAgAAAD4/xEAAAAMAAgAAAD3/xEAAAAMAAgAAAD2/xEAAAAMAAgAAAD1/xEAAAAMAAgAAAD0/xEAAAAMAAgAAADz/xEAAAAMAAgAAADy/xEAAAAMAAgAAADx/xEAAAAMAAgAAADw/xEAAAAMAAgAAADv/xEAAAAMAAgAAADu/xEAAAAMAAgAAADt/xEAAAAMAAgAAADs/xEAAAAMAAgAAADr/xEAAAAMAAgAAADq/xEAAAAMAAgAAADp/xEAAAAMAAgAAADo/xEAAAAMAAgAAADn/xEAAAAMAAgAAADm/xEAAAAMAAgAAADl/xEAAAAMAAgAAADk/xEAAAAMAAgAAADj/xEAAAAMAAgAAADi/xEAAAAMAAgAAADh/xEAAAAMAAgAAAA=")
tile_set = ExtResource("8_x2fux")

[node name="TileMapLayer_Objects" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_jkv2x")

[node name="PhantomCamera2D2" type="Node2D" parent="." node_paths=PackedStringArray("follow_target")]
top_level = true
position = Vector2(1402, 153)
script = ExtResource("13_iw4em")
follow_mode = 2
follow_target = NodePath("../Trophy")
tween_resource = SubResource("Resource_o6xl0")
tween_on_load = false
follow_offset = Vector2(0, -50)
dead_zone_width = 0.426
dead_zone_height = 0.41
metadata/_custom_type_script = "uid://bhexx6mj1xv3q"

[node name="Camera2D" type="Camera2D" parent="."]
physics_interpolation_mode = 1
position = Vector2(32, 186)
process_callback = 0

[node name="PhantomCameraHost" type="Node" parent="Camera2D"]
process_priority = 300
process_physics_priority = 300
script = ExtResource("15_nossa")
metadata/_custom_type_script = "uid://bd046eokvcnu2"

[node name="Player" parent="." instance=ExtResource("16_hjqri")]
position = Vector2(32, 256)
collision_mask = 18
move_speed = 200.0

[node name="PhantomCamera2D" type="Node2D" parent="Player" node_paths=PackedStringArray("follow_target")]
top_level = true
position = Vector2(32, 186)
script = ExtResource("13_iw4em")
priority = 1
follow_mode = 5
follow_target = NodePath("..")
snap_to_pixel = true
tween_resource = SubResource("Resource_gmpev")
tween_on_load = false
follow_offset = Vector2(0, -70)
follow_damping = true
follow_damping_value = Vector2(0.04, 0.02)
dead_zone_width = 0.33
dead_zone_height = 0.38
_preview_noise = false
metadata/_custom_type_script = "uid://bhexx6mj1xv3q"

[node name="Coin" parent="." instance=ExtResource("9_s7g0b")]
position = Vector2(594, 154)

[node name="Spike" parent="." instance=ExtResource("10_mmfjm")]
position = Vector2(675, 99)

[node name="Spike2" parent="." instance=ExtResource("10_mmfjm")]
position = Vector2(601, 136)

[node name="Trophy" parent="." instance=ExtResource("11_k8ld0")]
position = Vector2(1402, 203)

[node name="Enemy" parent="." instance=ExtResource("18_1aans")]
position = Vector2(754, 226)
config = ExtResource("19_v6ha0")

[node name="Enemy2" parent="." instance=ExtResource("18_1aans")]
position = Vector2(990, 235)
config = ExtResource("20_gmpev")

[node name="Box" parent="." instance=ExtResource("12_mbb35")]
position = Vector2(713, 168)
spawnedObject = ExtResource("9_s7g0b")
